# Stratum

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
crons/: seed-crons.sh
docs/: configuration.md
modules/stratum-boot-health/src/: main.rs
modules/stratum-brain/src/stratum_brain/: integrations.py  reflect.py  sources.py
modules/stratum-continuity/: pyproject.toml  stratum_continuity.py
modules/stratum-lens/: pyproject.toml
modules/stratum-lens/stratum_lens/: indexer.py
modules/stratum-mind/src/db/: mod.rs
modules/stratum-mind/src/memory/: mod.rs
modules/stratum-reports/: pyproject.toml  stratum-reports.py
modules/stratum-watch/src/: main.rs
scripts/: init-mind-db.sql
