[project]
name = "stratum-continuity"
version = "0.1.0"
description = "Session continuity — snapshots, drift analysis, and session primer injection"
requires-python = ">=3.11"
dependencies = [
    "rich>=13",
]

[project.scripts]
stratum-continuity = "stratum_continuity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["stratum_continuity.py"]
