[project]
name = "stratum-reports"
version = "0.1.0"
description = "Document management — ingest, validate, and track long-form reports"
requires-python = ">=3.11"
dependencies = [
    "rich>=13",
]

[project.scripts]
stratum-reports = "stratum_reports:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["stratum_reports.py"]
